# OrionInterview

./: .gitignore  PROJECT_REQUIREMENT.md  README.md  docker-compose.yaml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: backend-tests.yml
.github/workflows/: backend-tests.yml  lint.yml
api_docs/: all_users.md  change_role.md  create_post.md  delete_post.md  delete_user.md  get_post.md  get_posts.md  login.md  profile.md  register.md  update_post.md
backend/app/: main.py
backend/app/crud/: user.py
backend/app/models/: post.py  user.py
backend/app/routers/: auth.py  forum.py  users.py
backend/app/schemas/: post.py  user.py
backend/app/utils/: database.py  init_db.py
backend/testing/: test_authentication.py  test_forum.py  test_user_operations.py
frontend/: app.py
frontend/app/: app.py
frontend/app/utils/: auth.py
frontend/app/views/: posts.py  profile.py
frontend/testing/: test_frontend.py
frontend/utils/: api.py
frontend/views/: admin.py  posts.py  sign_in.py  sign_up.py
orion_interview/backend/: dockerfile  run_backend.py  run_tests.py
orion_interview/backend/app/: main.py
orion_interview/backend/app/crud/: user.py
orion_interview/backend/app/models/: user.py
orion_interview/backend/app/routers/: auth.py  forum.py  users.py
orion_interview/backend/testing/: test_authentication.py  test_forum.py  test_user_operations.py
orion_interview/frontend/: app.py  dockerfile  run_frontend.py  run_tests.py
orion_interview/frontend/utils/: api.py
orion_interview/frontend/views/: posts.py  profile.py  sign_in.py
(+6 files in other folders)
